--- a/WWW/WWW/WWW/Views/Home/Register.cshtml
+++ b/WWW/WWW/WWW/Views/Home/Register.cshtml
@@ -1,13 +1,73 @@
-﻿@{
-    Layout = null;
-}
+﻿<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
 
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Register</title>
-</head>
-<body>
-</body>
+    <title>Narrow Jumbotron Template for Bootstrap</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="../../Content/bootstrap.min.css" rel="stylesheet">
+   
+    <!-- Custom styles for this template -->
+    <link href="../../Content/jumbotron-narrow.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills pull-right">
+            <li role="presentation">@Html.ActionLink("Zaloguj", "Index", "Home")</li>
+            <li role="presentation" class="active">@Html.ActionLink("Rejestruj", "Register", "Home", null, null)</li>
+            <li role="presentation"><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+        <h3 class="text-muted">Login Panel</h3>
+      </div>
+
+      @if(true)
+      {
+	      <div class="alert alert-success" role="alert">
+		  	<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+		  	<span class="sr-only"></span>
+		  	Wypełnij poniższy formularz aby się zarejestrować
+		  </div>
+	  }
+
+      <form action="../../Home/RegisterSend" method="POST"> 
+      <div class="input-group">
+	  	<input type="text" class="form-control" name="username" placeholder="Username" >
+	  </div>
+	  <br />
+      <div class="input-group">
+	  	<input type="password" class="form-control" name="password" placeholder="Password" >
+	  </div>
+	  <br />
+	  <input type="submit" class="btn btn-default" value="Rejestruj">
+	  <br />
+	  <br />
+	  </form>
+
+      <footer class="footer">
+        <p>&copy; 2016 Mateusz Pater</p>
+      </footer>
+
+    </div> <!-- /container -->
+
+  </body>
 </html>
+
 
