--- a/WWW/WWW/WWW/Views/Home/Index.cshtml
+++ b/WWW/WWW/WWW/Views/Home/Index.cshtml
@@ -43,7 +43,7 @@
 	      <div class="alert alert-success" role="alert">
 		  	<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 		  	<span class="sr-only"></span>
-		  	Zaloguj się albo przejdź do rejestracji
+		  	@ViewBag["info"];
 		  </div>
 	  }
 
