--- a/WWW/WWW/WWW/Views/Home/Index.cshtml
+++ b/WWW/WWW/WWW/Views/Home/Index.cshtml
@@ -38,15 +38,12 @@
         <h3 class="text-muted">Login Panel</h3>
       </div>
 
-      @if(true)
-      {
-	      <div class="alert alert-success" role="alert">
+	      <div class="alert alert-info" role="alert">
 		  	<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 		  	<span class="sr-only"></span>
 		  	@ViewBag.info
 		  </div>
-	  }
-
+	  
       <form action="../../Home/Login" method="POST"> 
       <div class="input-group">
 	  	<input type="text" class="form-control" name="username" placeholder="Username" >
