--- a/WWW/WWW/WWW/Views/Home/Panel.cshtml
+++ b/WWW/WWW/WWW/Views/Home/Panel.cshtml
@@ -37,14 +37,12 @@
         <h3 class="text-muted">Login Panel</h3>
       </div>
 
-      @if(true)
-      {
-	      <div class="alert alert-success" role="alert">
+	      <div class="alert alert-info" role="alert">
 		  	<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 		  	<span class="sr-only"></span>
 		  	@ViewBag.info
 		  </div>
-	  }
+	 
 
       <form action="../../Home/Update" method="POST"> 
       <h4>ID użytkownika</h4>
