--- a/WWW/WWW/WWW/Views/Home/Register.cshtml
+++ b/WWW/WWW/WWW/Views/Home/Register.cshtml
@@ -38,14 +38,12 @@
         <h3 class="text-muted">Login Panel</h3>
       </div>
 
-      @if(true)
-      {
-	      <div class="alert alert-success" role="alert">
+	      <div class="alert alert-info" role="alert">
 		  	<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 		  	<span class="sr-only"></span>
 		  	Wypełnij poniższy formularz aby się zarejestrować
 		  </div>
-	  }
+	 
 
       <form action="../../Home/RegisterSend" method="POST"> 
       <div class="input-group">
